Fix item value for the first item of each category in your inventory on mobile.

--- a/extension/scripts/features/item-values/ttItemValues.css
+++ b/extension/scripts/features/item-values/ttItemValues.css
@@ -90,3 +90,7 @@ body.tt-tablet .items-cont .qty {
 body.tt-mobile #bazaarRoot .tt-item-price-wrap {
 	margin-bottom: 1px;
 }
+
+body.tt-mobile .items-wrap .tt-item-price-wrap {
+	margin-bottom: 4px;
+}
